target linux-musl in release

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -86,9 +86,10 @@ jobs:
           cd ./target/release
           sha256sum crunch > crunch.sha256
 
-      # Rename the binary and sha256 file to include the OS version
-      - run: mv target/release/crunch target/release/crunch.ubuntu-2204
-      - run: mv target/release/crunch.sha256 target/release/crunch.sha256.ubuntu-2204
+      - name: Rename the binary and sha256 file to include the target version
+        run: |
+          mv target/release/crunch target/release/crunch.ubuntu-2204
+          mv target/release/crunch.sha256 target/release/crunch.sha256.ubuntu-2204
 
       # Upload the binary and sha256 file as artifacts
       - uses: actions/upload-artifact@v4
@@ -135,9 +136,10 @@ jobs:
           cd ./target/release
           sha256sum crunch > crunch.sha256
 
-      # Rename the binary and sha256 file to include the OS version
-      - run: mv target/release/crunch target/release/crunch.ubuntu-2004
-      - run: mv target/release/crunch.sha256 target/release/crunch.sha256.ubuntu-2004
+      - name: Rename the binary and sha256 file to include the target version
+        run: |
+          mv target/release/crunch target/release/crunch.ubuntu-2004
+          mv target/release/crunch.sha256 target/release/crunch.sha256.ubuntu-2004
 
       # Upload the binary and sha256 file as artifacts
       - uses: actions/upload-artifact@v4
@@ -150,11 +152,69 @@ jobs:
           name: crunch.sha256.ubuntu-2004
           path: target/release
 
+  build-linux-musl:
+    name: Build on Ubuntu and target Linux musl
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust latest stable
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+          components: rustfmt, clippy
+
+      - name: Run cargo test
+        uses: actions-rs/cargo@v1
+        env:
+          CRUNCH_CONFIG_FILENAME: .env.example
+        with:
+          command: test
+
+      - name: Add musl dependencies
+        run: |
+          rustup target add x86_64-unknown-linux-musl
+          sudo apt install musl-tools
+
+      - name: Run cargo build
+        uses: actions-rs/cargo@v1
+        env:
+          CRUNCH_CONFIG_FILENAME: .env.example
+          CC: musl-gcc
+          RUSTFLAGS: "-C target-feature=+crt-static"
+        with:
+          command: build
+          args: --release --target=x86_64-unknown-linux-musl
+
+      - name: Generate SHA-256 hash file
+        run: |
+          cd target/x86_64-unknown-linux-musl/release
+          sha256sum crunch > crunch.sha256
+
+      - name: Rename the binary and sha256 file to include the target version
+        run: |
+          mv target/x86_64-unknown-linux-musl/release/crunch target/release/crunch.linux-musl
+          mv target/x86_64-unknown-linux-musl/release/crunch.sha256 target/release/crunch.sha256.linux-musl
+
+      # Upload the binary and sha256 file as artifacts
+      - uses: actions/upload-artifact@v4
+        with:
+          name: crunch.linux-musl
+          path: target/release
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: crunch.sha256.linux-musl
+          path: target/release
+
   create-release:
     needs:
       - build-ubuntu-latest
       - build-ubuntu-2204
       - build-ubuntu-2004
+      - build-linux-musl
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -276,4 +336,34 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: target/release/crunch.sha256.ubuntu-2004
           asset_name: crunch.sha256.ubuntu-2004
+          asset_content_type: text/plain
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: crunch.linux-musl
+          path: target/release
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: crunch.sha256.linux-musl
+          path: target/release
+
+      - name: Upload crunch binary target linux musl
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: target/release/crunch.linux-musl
+          asset_name: crunch.linux-musl
+          asset_content_type: application/octet-stream
+
+      - name: Upload crunch sha256 target linux musl
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: target/release/crunch.sha256.linux-musl
+          asset_name: crunch.sha256.linux-musl
           asset_content_type: text/plain
