--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "crunch"
 version = "0.19.1"
 authors = ["Paulo <paulo@turboflakes.io>"]
-description = "Crunch is a command-line interface (CLI) to claim staking rewards (flakes) every X hours for Substrate-based chains" 
+description = "Crunch is a command-line interface (CLI) to claim staking rewards (flakes) every X hours for Substrate-based chains"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,7 +10,11 @@ edition = "2018"
 [dependencies]
 # crunch dependencies
 async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
-codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = ["derive", "full", "bit-vec"] }
+codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = [
+    "derive",
+    "full",
+    "bit-vec",
+] }
 dotenv = "0.15"
 envy = "0.4"
 env_logger = "0.11.6"
@@ -30,7 +34,14 @@ url = "2.5.4"
 base64 = "0.22.1"
 rand = "0.9.0"
 # subxt dependencies
-subxt = { version = "0.40.0", features = ["native", "reconnecting-rpc-client", "unstable-light-client"] }
+subxt = { version = "0.40.0", features = [
+    "native",
+    "reconnecting-rpc-client",
+    "unstable-light-client",
+] }
 subxt-signer = { version = "0.40.0", features = ["subxt"] }
 # substrate dependencies
 sp-core = "35.0.0"
+
+[target.x86_64-unknown-linux-musl.dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
