--- a/.env.example
+++ b/.env.example
@@ -23,13 +23,18 @@ CRUNCH_STASHES=5GTD7ZeD823BjpmZBCSzBQp7cvHR1Gunq7oDkurZr9zUev2n
 #CRUNCH_LIGHT_CLIENT_ENABLED=false
 #
 # [CRUNCH_SUBSTRATE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
-# connect. (e.g. wss://rpc.turboflakes.io:443/kusama) (NOTE: substrate_ws_url takes precedence
+# connect. (e.g. wss://kusama.rpc.turboflakes.io:443) (NOTE: substrate_ws_url takes precedence
 # than <CHAIN> argument)
-CRUNCH_SUBSTRATE_WS_URL=ws://localhost:9944
+CRUNCH_SUBSTRATE_WS_URL=wss://kusama.rpc.turboflakes.io:443
 #
 # [CRUNCH_SUBSTRATE_PEOPLE_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
-# connect and retrieve identities from. (e.g. wss://sys.turboflakes.io:443/people-kusama)
-#CRUNCH_SUBSTRATE_PEOPLE_WS_URL=wss://sys.turboflakes.io:443/people-kusama
+# connect and retrieve identities from. (e.g. wss://people-kusama.rpc.turboflakes.io:443)
+#CRUNCH_SUBSTRATE_PEOPLE_WS_URL=wss://people-kusama.rpc.turboflakes.io:443
+#
+# NOTE: CRUNCH_SUBSTRATE_ASSET_HUB_WS_URL is ONLY relevant for chains where AHM already took place (Kusama, Paseo, Westend)
+# [CRUNCH_SUBSTRATE_ASSET_HUB_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
+# connect, trigger payouts or view pending rewards. (e.g. wss://asset-hub-kusama.rpc.turboflakes.io:443)
+CRUNCH_SUBSTRATE_ASSET_HUB_WS_URL=wss://asset-hub-kusama.rpc.turboflakes.io:443
 #
 # [CRUNCH_MAXIMUM_PAYOUTS] Maximum number of unclaimed eras for which an extrinsic payout
 # will be submitted. (e.g. a value of 4 means that if there are unclaimed eras in the last
