--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -25,3 +25,6 @@ subxt-signer = { workspace = true }
 rand = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
+
+[target.x86_64-unknown-linux-musl.dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
