--- a/packages/error/Cargo.toml
+++ b/packages/error/Cargo.toml
@@ -18,3 +18,6 @@ subxt = { workspace = true }
 subxt-signer = { workspace = true }
 reqwest = { workspace = true }
 thiserror = { workspace = true }
+
+[target.x86_64-unknown-linux-musl.dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
