--- a/packages/chains/asset-hub-paseo/Cargo.toml
+++ b/packages/chains/asset-hub-paseo/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "crunch-asset-hub-westend"
+name = "crunch-asset-hub-paseo"
 version.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -14,8 +14,8 @@ crunch-error = { path = "../../error" }
 crunch-pools = { path = "../../pools" }
 crunch-report = { path = "../../report" }
 crunch-stats = { path = "../../stats" }
-crunch-people-westend = { path = "../people-westend" }
-crunch-relay-chain-westend = { path = "../relay-chain-westend" }
+crunch-people-paseo = { path = "../people-paseo" }
+crunch-relay-chain-paseo = { path = "../relay-chain-paseo" }
 
 async-recursion = { workspace = true }
 log = { workspace = true }
