--- a/packages/chains/people-paseo/Cargo.toml
+++ b/packages/chains/people-paseo/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "crunch-asset-hub-westend"
+name = "crunch-people-paseo"
 version.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -9,15 +9,9 @@ edition.workspace = true
 
 [dependencies]
 crunch-core = { path = "../../core" }
-crunch-config = { path = "../../config" }
 crunch-error = { path = "../../error" }
-crunch-pools = { path = "../../pools" }
 crunch-report = { path = "../../report" }
-crunch-stats = { path = "../../stats" }
-crunch-people-westend = { path = "../people-westend" }
-crunch-relay-chain-westend = { path = "../relay-chain-westend" }
 
 async-recursion = { workspace = true }
 log = { workspace = true }
 subxt = { workspace = true }
-subxt-signer = { workspace = true }
