--- a/packages/crunch/Cargo.toml
+++ b/packages/crunch/Cargo.toml
@@ -15,6 +15,7 @@ crunch-matrix = { path = "../matrix" }
 crunch-support = { path = "../support" }
 crunch-kusama = { path = "../chains/kusama" }
 crunch-paseo = { path = "../chains/paseo" }
+crunch-polkadot = { path = "../chains/polkadot" }
 crunch-westend = { path = "../chains/westend" }
 
 async-std = { workspace = true }
