--- a/.env.example
+++ b/.env.example
@@ -31,10 +31,14 @@ CRUNCH_SUBSTRATE_WS_URL=ws://localhost:9944
 # connect and retrieve identities from. (e.g. wss://sys.turboflakes.io:443/people-kusama)
 #CRUNCH_SUBSTRATE_PEOPLE_WS_URL=wss://sys.turboflakes.io:443/people-kusama
 #
+# NOTE: CRUNCH_SUBSTRATE_ASSET_HUB_WS_URL is ONLY relevant for chains where AHM already took place (Kusama, Paseo, Westend)
+# [CRUNCH_SUBSTRATE_ASSET_HUB_WS_URL] Substrate websocket endpoint for which 'crunch' will try to
+# connect, trigger payouts or view pending rewards. (e.g. wss://asset-hub-kusama.rpc.turboflakes.io:443)
+#
 # [CRUNCH_MAXIMUM_PAYOUTS] Maximum number of unclaimed eras for which an extrinsic payout
 # will be submitted. (e.g. a value of 4 means that if there are unclaimed eras in the last
-# 84 the maximum unclaimed payout calls for each stash address will be 4). [default: 4]
-CRUNCH_MAXIMUM_PAYOUTS=4
+# 84 the maximum unclaimed payout calls for each stash address will be 4). [default: 16]
+CRUNCH_MAXIMUM_PAYOUTS=16
 #
 # [CRUNCH_MAXIMUM_HISTORY_ERAS] Maximum number of history eras for which crunch will look for
 # unclaimed rewards. The maximum value supported is the one defined by constant history_depth
@@ -42,8 +46,12 @@ CRUNCH_MAXIMUM_PAYOUTS=4
 # unclaimed rewards for each stash address). [default: 4]
 CRUNCH_MAXIMUM_HISTORY_ERAS=4
 #
+#
+#
+# NOTE: CRUNCH_MAXIMUM_CALLS is being DEPRECATED. Crunch tryes to optimize the number of calls that fit in a single
+# batch call on the fly.
 # [CRUNCH_MAXIMUM_CALLS] Maximum number of calls in a single batch. [default: 4]
-CRUNCH_MAXIMUM_CALLS=3
+# CRUNCH_MAXIMUM_CALLS=3
 #
 # [CRUNCH_SEED_PATH] File path containing the private seed phrase to Sign the extrinsic
 # payout call. [default: .private.seed]
