fix gh actions with cargo clean efore build

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -77,6 +77,9 @@ jobs:
         with:
           command: test
 
+      - name: Clean cargo target
+        run: cargo clean || true
+
       - name: Prepare larger tmp directory
         run: mkdir -p /home/runner/work/tmp
 
