--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -28,13 +28,14 @@ jobs:
         with:
           command: test
 
-      - name: Prepare larger tmp directory
-        run: mkdir -p /home/runner/work/tmp
+      - name: Clean cargo target
+        uses: actions-rs/cargo@v1
+        with:
+          command: clean
 
       - name: Run cargo build
         uses: actions-rs/cargo@v1
         env:
-          TMPDIR: /home/runner/work/tmp
           CRUNCH_CONFIG_FILENAME: .env.example
         with:
           command: build
@@ -78,15 +79,13 @@ jobs:
           command: test
 
       - name: Clean cargo target
-        run: cargo clean || true
-
-      - name: Prepare larger tmp directory
-        run: mkdir -p /home/runner/work/tmp
+        uses: actions-rs/cargo@v1
+        with:
+          command: clean
 
       - name: Run cargo build
         uses: actions-rs/cargo@v1
         env:
-          TMPDIR: /home/runner/work/tmp
           CRUNCH_CONFIG_FILENAME: .env.example
         with:
           command: build
@@ -139,13 +138,14 @@ jobs:
           rustup target add x86_64-unknown-linux-musl
           sudo apt install musl-tools
 
-      - name: Prepare larger tmp directory
-        run: mkdir -p /home/runner/work/tmp
+      - name: Clean cargo target
+        uses: actions-rs/cargo@v1
+        with:
+          command: clean
 
       - name: Run cargo build
         uses: actions-rs/cargo@v1
         env:
-          TMPDIR: /home/runner/work/tmp
           CRUNCH_CONFIG_FILENAME: .env.example
           CC: musl-gcc
           RUSTFLAGS: "-C target-feature=+crt-static"
